--- a/basic/src/main/resources/application.yml
+++ b/basic/src/main/resources/application.yml
@@ -9,6 +9,19 @@ spring:
     username: root
     password: 1234
 
+  jpa:
+
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database: mysql
+    hibernate:
+      ddl-auto: create  #create , create-drop , update , none
+    # JDBC TimeZone Setting
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: Asia/Seoul
+        format_sql: true
 server:
   port: 8084
 
