--- a/basic/src/main/resources/application.yml
+++ b/basic/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   output:
     ansi:
       enabled: always
+  main:
+    allow-bean-definition-overriding: true
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
