--- a/jpa1/build.gradle
+++ b/jpa1/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    // P6Spy 의존성 추가
+    // P6Spy 의존성 추가  --> jpa db 콘솔창에 ? 값넣어주는 라이브러리
     implementation 'p6spy:p6spy:3.9.1'
     implementation 'com.github.gavlyukovskiy:datasource-decorator-spring-boot-autoconfigure:1.9.0'
 }
