--- a/jpa1/src/main/resources/application.yml
+++ b/jpa1/src/main/resources/application.yml
@@ -20,18 +20,17 @@ spring:
     prefix: classpath:/templates/
 
   jpa:
-    show-sql: true
+    #show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     database: mysql
     hibernate:
       ddl-auto: update
-      #show_sql: true
-      #format_sql: true
-      use_sql_comments: true
-      highlight_sql: true
 
     # JDBC TimeZone Setting
     properties:
       hibernate:
         jdbc:
           time_zone: Asia/Seoul
+        format_sql: true
+        use_sql_comments: true
+
