--- a/queryDsl/build.gradle
+++ b/queryDsl/build.gradle
@@ -37,10 +37,15 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
+    // queryDSL Q도메인클래스 파일을 미리만든다. -> generated 폴더 안에 :: sql 쿼리문을 자바 메서드처럼 사용하게
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // P6Spy 의존성 추가  --> jpa db 콘솔창에 ? 값넣어주는 라이브러리
+    implementation 'p6spy:p6spy:3.9.1'
+    implementation 'com.github.gavlyukovskiy:datasource-decorator-spring-boot-autoconfigure:1.9.0'
 }
 
 
