--- a/security/build.gradle
+++ b/security/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     // P6Spy 의존성 추가
     implementation 'p6spy:p6spy:3.9.1'
