--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -1,3 +1,15 @@
+spring:
+  profiles:
+    active: local
+    group:
+      local: common, secret
+
+---
+spring:
+  config:
+    activate:
+      on-profile: common
+
 server:
   port: 8081
   servlet:
@@ -7,7 +19,6 @@ server:
       enabled: true
       force: true
 
-spring:
   jpa:
     hibernate:
       ddl-auto: update #create update none
