--- a/stock/src/main/resources/application.yml
+++ b/stock/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-    show-sql: true
+    show-sql: false
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,8 +18,8 @@ logging:
   level:
     org:
       hibernate:
-        SQL: DEBUG
+        SQL: info
         type:
           descriptor:
             sql:
-              BasicBinder: TRACE
+              BasicBinder: info
