--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation 'p6spy:p6spy:3.9.1'
     implementation 'com.github.gavlyukovskiy:datasource-decorator-spring-boot-autoconfigure:1.9.0'
 
+    //redis 의존성 추가 ->redis 프로그램 설치 후 실행 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 }
 
 tasks.named('bootBuildImage') {
