--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     //redis 의존성 추가 ->redis 프로그램 설치 후 실행
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    //redisson
+    implementation group: 'org.redisson', name: 'redisson-spring-boot-starter', version: '3.27.0'
+
 }
 
 tasks.named('bootBuildImage') {
